--- a/halo/template/details.pug
+++ b/halo/template/details.pug
@@ -16,15 +16,13 @@ block content
         a(href='camera-hub.html') Máy ảnh
       li.breadcrumb-item
         a(href='dslr-hub.html') Máy ảnh DSLR
-      li.breadcrumb-item.active Canon EOS 1DX Mark III
+      li.breadcrumb-item.active Canon EOS 1DX Mark&nbsp;III
 
   .details__wrapper.container-xl 
 
-    h1.details__header.w-100.text-left Máy ảnh DSLR 
-      span.logo-canon Canon 
-      | 1DX Mark III 
+    h1.details__header.w-100.text-left Máy ảnh DSLR Canon EOS 1DX Mark&nbsp;III 
     .details__review-score.w-100
-      h2.score--user.font-weight-bold.text-left Người dùng đánh giá: 
+      h2.score--user.font-weight-bold.text-left Người dùng đánh&nbsp;giá: 
         span x / 5
       h2.score--shop.font-weight-bold.text-left HALO đánh giá: 
         span x / 5
@@ -60,7 +58,7 @@ block content
           br
           | Bảo hành: Chính hãng 24 tháng 
           a.text-primary.font-italic(href="#") (xem chi tiết)
-        p.summary__text Canon EOS 1D X Mark III mang đến chuẩn mực cao nhất cho dòng máy ảnh DSLR full-frame. Cho tới hiện tại, đây là chiếc máy ảnh hàng đầu và đẳng cấp nhất của Canon.
+        p.summary__text Canon EOS 1D X Mark III mang đến chuẩn mực cao nhất cho dòng máy ảnh DSLR full-frame. Cho tới hiện tại, đây là chiếc máy ảnh hàng đầu và đẳng cấp nhất của&nbsp;Canon.
 
         p.details__price 130.090.000đ
         p.details__sale-text
@@ -76,11 +74,11 @@ block content
         .summary__box-content 
           h2.details__sub-header.text-left.mb-3 Hộp sản phẩm bao gồm
           ul.box-content__list
-            li.box-content__item 1x Máy ảnh Canon EOS-1D X Mark III
+            li.box-content__item 1x Máy ảnh Canon EOS-1D X Mark&nbsp;III
             li.box-content__item 1x pin Canon LP-E19
             li.box-content__item 1x dock sạc Canon LC-E19
             li.box-content__item 1x nắp ngàm EF
-            li.box-content__item 1x dây đeo Canon L7 Wide Straps cỡ XL
+            li.box-content__item 1x dây đeo Canon L7 Wide Straps cỡ&nbsp;XL
 
     section.details__offers 
     
@@ -96,10 +94,10 @@ block content
       .offers__special
         h2.details__sub-header Ưu đãi đặc biệt
         ul.special__list
-          li.special__item - Miễn phí giao hàng toàn quốc trong vòng 2 - 5 ngày
-          li.special__item - Hỗ trợ dán màn hình miễn phí trọn đời sản phẩm.
-          li.special__item - Miễn phí vệ sinh, khử mốc trong thời hạn bảo hành 
-          li.special__item - Tặng voucher giá trị 1.000.000đ cho lần mua hàng kế tiếp
+          li.special__item - Miễn phí giao hàng toàn quốc trong vòng 2&nbsp;-&nbsp;5&nbsp;ngày
+          li.special__item - Hỗ trợ dán màn hình miễn phí trọn đời sản&nbsp;phẩm.
+          li.special__item - Miễn phí vệ sinh, khử mốc trong thời hạn bảo&nbsp;hành 
+          li.special__item - Tặng voucher giá trị 1.000.000đ cho lần mua hàng kế&nbsp;tiếp
       
       button.offers__btn.btn Đăng ký mua trả góp lãi suất 0%
       
@@ -128,28 +126,28 @@ block content
 
         img(src="img/img--details/intro-img-1.jpg", alt="Canon 1DX Mark III")
 
-        p Canon EOS 1D X Mark III sử dụng cảm biến hoàn toàn mới 20.1MP kết hợp với bộ xử lý hình ảnh DIGIC X mang lại chất lượng hình ảnh sắc nét ấn tượng với độ chi tiết cao nhất, giảm thiểu xác suất sai màu và hiệu ứng mới. 
+        p Canon EOS 1D X Mark III sử dụng cảm biến hoàn toàn mới 20.1MP kết hợp với bộ xử lý hình ảnh DIGIC X mang lại chất lượng hình ảnh sắc nét ấn tượng với độ chi tiết cao nhất, giảm thiểu xác suất sai màu và hiệu ứng&nbsp;mới. 
 
         img(src="img/img--details/intro-img-2.png", alt="Canon 1DX Mark III")
         
-        p Ngoài tốc độ ấn tượng, bộ xử lý cảm biến còn có phạm vi độ nhạy của dải ISO từ 100-102400, có thể mở rộng thành ISO 50-819200 để hỗ trợ làm việc trong nhiều điều kiện ánh sáng khác nhau. 
+        p Ngoài tốc độ ấn tượng, bộ xử lý cảm biến còn có phạm vi độ nhạy của dải ISO từ 100-102400, có thể mở rộng thành ISO 50-819200 để hỗ trợ làm việc trong nhiều điều kiện ánh sáng khác&nbsp;nhau. 
 
         h3.main-info__inner-header Hệ thống lấy nét
 
         img(src="img/img--details/intro-img-3.jpg", alt="Canon 1DX Mark III")
-        p Canon EOS 1DX Mark III sử dụng cảm biến AF mới với khả năng tự động lấy nét chính xác qua kính ngắm, Live View và video. Thông qua kính ngắm, hệ thống AF gồm 191 điểm lấy nét nhanh và chính xác tuyệt đối không chỉ ở tốc độ mà còn đạt khả năng AF Tracking mới. Về cách nhận diện khuôn mặt, EOS-1D X Mark III hỗ trợ công nghệ Head Detection kết hợp Deep Learning và khả năng đọc, phân tích chủ thể thông qua hình dạng và màu sắc.
+        p Canon EOS 1DX Mark III sử dụng cảm biến AF mới với khả năng tự động lấy nét chính xác qua kính ngắm, Live View và video. Thông qua kính ngắm, hệ thống AF gồm 191 điểm lấy nét nhanh và chính xác tuyệt đối không chỉ ở tốc độ mà còn đạt khả năng AF Tracking mới. Về cách nhận diện khuôn mặt, EOS-1D X Mark III hỗ trợ công nghệ Head Detection kết hợp Deep Learning và khả năng đọc, phân tích chủ thể thông qua hình dạng và màu&nbsp;sắc.
 
         h3.main-info__inner-header Tốc độ đỉnh cao
 
         img(src="img/img--details/intro-img-4.jpg", alt="Canon 1DX Mark III")
 
-        p Tốc độ chụp nhanh của Burst Shooting mang đến cơ hội cao hơn cho các nhiếp ảnh gia chuyên nghiệp để ghi lại khoảnh khắc chính xác với bố cục hoàn hảo. Máy ảnh EOS-1D X Mark III có tốc độ chụp ấn tượng lên tới 16 khung hình / giây bằng kính ngắm, đồng bộ với hệ thống AF / AE mới được phát triển để đáp ứng nhanh về lấy nét tự động chính xác và kiểm soát phơi sáng trong mọi lần chụp quyết định.
+        p Tốc độ chụp nhanh của Burst Shooting mang đến cơ hội cao hơn cho các nhiếp ảnh gia chuyên nghiệp để ghi lại khoảnh khắc chính xác với bố cục hoàn hảo. Máy ảnh EOS-1D X Mark III có tốc độ chụp ấn tượng lên tới 16 khung hình / giây bằng kính ngắm, đồng bộ với hệ thống AF / AE mới được phát triển để đáp ứng nhanh về lấy nét tự động chính xác và kiểm soát phơi sáng trong mọi lần chụp quyết&nbsp;định.
 
         h3.main-info__inner-header Thiết kế bền bỉ
 
         img(src="img/img--details/intro-img-6.png", alt="Canon 1DX Mark III")
 
-        p EOS-1D X Mark III được trang bị độ bền cơ chế màn trập khoảng 500.000 shot. Được thiết kế với thân máy bằng hợp kim magiê chắc chắn, có khả năng chống bụi và ẩm xung quanh các khu vực quan trọng, EOS-1D X Mark III sẵn sàng chống đỡ trong mọi nhiệm vụ.
+        p EOS-1D X Mark III được trang bị độ bền cơ chế màn trập khoảng 500.000 shot. Được thiết kế với thân máy bằng hợp kim magiê chắc chắn, có khả năng chống bụi và ẩm xung quanh các khu vực quan trọng, EOS-1D X Mark III sẵn sàng chống đỡ trong mọi nhiệm&nbsp;vụ.
       
 
       .main-info__toggler(data-toggle="collapse" data-target="#specs")
@@ -162,7 +160,7 @@ block content
           h3.main-info__inner-header Hình ảnh
           .category__row
             p.category__key Kích cỡ cảm biến
-            p.category__value Full frame BSI-CMOS (35.9 x 23.9 mm)
+            p.category__value Full frame BSI-CMOS (35.9&nbsp;x&nbsp;23.9&nbsp;mm)
           .category__row
             p.category__key Độ Phân Giải
             p.category__value 20.1 Megapixel
@@ -174,7 +172,7 @@ block content
           h3.main-info__inner-header Ánh sáng
           .category__row
             p.category__key ISO
-            p.category__value 100 - 102400 (Mở rộng: 50 - 819200)
+            p.category__value 100 - 102400 (Mở rộng: 50&nbsp;-&nbsp;819200)
           .category__row
             p.category__key Tốc Độ Chụp Liên Tục
             p.category__value 20 hình/giây
@@ -189,7 +187,7 @@ block content
             p.category__value DCI 4K (4096 x 2160)
           .category__row
             p.category__key Micro
-            p.category__value 2 micro stereo (hỗ trợ micro ngoài)
+            p.category__value 2 micro stereo (hỗ trợ micro&nbsp;ngoài)
 
         .specs__category 
           h3.main-info__inner-header Kính Ngắm / Màn Hình
@@ -210,7 +208,7 @@ block content
             p.category__value 2 khe (hoạt động đồng thời)
           .category__row
             p.category__key Jack Cắm
-            p.category__value USB Type-C (USB 3.1), HDMI C (Mini), Canon N3, 3.5mm Headphone, 3.5mm Microphone, PC Sync Socket, RJ45
+            p.category__value USB Type-C (USB 3.1), HDMI C (Mini), Canon N3, 3.5mm Headphone, 3.5mm Microphone, PC Sync&nbsp;Socket,&nbsp;RJ45
           .category__row
             p.category__key Kết Nối Không Dây
             p.category__value Wi-Fi/ Bluetooth
@@ -222,7 +220,7 @@ block content
           h3.main-info__inner-header Pin / Kích Thước / Trọng Lượng
           .category__row
             p.category__key Pin
-            p.category__value 1 x LP-E19 Lithium-Ion, 2750 mAh (Trung bình 2850 Shots)
+            p.category__value 1 x LP-E19 Lithium-Ion, 2750 mAh (Trung bình 285&nbsp;Shots)
           .category__row
             p.category__key Kích Thước
             p.category__value 158 x 167.6 x 82.6 mm (cao x ngang x dày)
@@ -245,7 +243,7 @@ block content
               i.far.fa-clock
               | 01/01/2021
 
-          p.review__sub-preview 1DX mark III không chỉ mang lại sự phấn khích với thiết bị công nghệ cao, mà còn là niềm cảm hứng bất tận khi tác nghiệp. Đây là camera có độ ổn định cao nhất thế giới: dù là ra chiến trường, leo đỉnh Everest hay đơn thuần là chụp người thương, bạn sẽ luôn thấy an tâm là sẽ có những tấm ảnh chất lượng và tối ưu nhất.
+          p.review__sub-preview 1DX mark III không chỉ mang lại sự phấn khích với thiết bị công nghệ cao, mà còn là niềm cảm hứng bất tận khi tác nghiệp. Đây là camera có độ ổn định cao nhất thế giới: dù là ra chiến trường, leo đỉnh Everest hay đơn thuần là chụp người thương, bạn sẽ luôn thấy an tâm là sẽ có những tấm ảnh chất lượng và tối ưu&nbsp;nhất.
           button.review__btn.btn--dark.btn Xem chi tiết
 
       .main-info__toggler(data-toggle="collapse" data-target="#sample")
