--- a/halo/css/layout.css
+++ b/halo/css/layout.css
@@ -483,6 +483,18 @@ Map: chung -> cart -> search bar -> search min -> search btn
   align-items: center;
 }
 
+.current-user__avatar {
+  display: block;
+}
+
+.username {
+  margin: 0px 10px;
+  max-width: 180px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .cart-icon {
   position: relative;
   animation-duration: 0.12s;
@@ -497,8 +509,8 @@ Map: chung -> cart -> search bar -> search min -> search btn
   font-weight: bold;
   line-height: 0.8;
   position: absolute;
-  top: -9px;
-  right: -10px;
+  top: -7px;
+  right: -9px;
   width: 17px;
   height: 17px;
   color: white;
@@ -735,8 +747,8 @@ footer {
   width: 30px;
 }
 
-#logreg.modal-footer {
-  padding: 0px 0px 20px 0px;
+#logreg .modal-footer {
+  padding: 0px 0px 15px 0px;
 }
 
 .logreg-portal {
@@ -892,20 +904,24 @@ footer {
     font-size: 14px; 
   }
 
+  .logreg-togglers {
+    display: flex !important;
+    justify-content: flex-start;
+  }
+
   .cart-icon {
     margin: 0px 10px 0px 20px;
   }
 
   .cart__badge-wrapper {
     font-size: 14px;
-    top: -9px;
+    top: -8px;
     right: -12px;
     width: 20px;
     height: 20px;
     color: white;
     border-radius: 50%;
   }
-
 
   .fa-search, 
   .fa-shopping-cart {
@@ -962,6 +978,22 @@ footer {
     padding: 5px 0px;
     line-height: 30px;
   }
+
+  .logreg-togglers-wrapper .dropdown-menu {
+    background-color: #222222;
+    width: 100%;
+  }
+
+  .logreg-togglers-wrapper .dropdown-item {
+    color: white;
+    font-size: 16px;
+  }
+
+  .logreg-togglers-wrapper .dropdown-item:hover {
+    color: black;
+  }
+
+
 
   .copyright {
     font-size: 14px;
@@ -1050,6 +1082,10 @@ footer {
     font-size: 16px;
   }
 
+  .navbar-collapse { /* collapse từ full màn giảm về auto */
+    margin-left: 0px;
+  }
+
   .search-bar {  /*search box + search btn + cancel btn*/
     padding: 10px 0px; /*bỏ padding 2 bên khi MAX*/
   }
@@ -1075,6 +1111,10 @@ footer {
 
   .log-reg {
     margin-left: 271px !important;  /* giãn cách lại menu thông qua log-reg */
+  }
+
+  .logreg-togglers {
+    min-width: 200px;
   }
 
   .nav-item:nth-child(-n+4) {   /* giãn cách lại các menu item */
