--- a/halo/template/parts/header.pug
+++ b/halo/template/parts/header.pug
@@ -25,10 +25,22 @@ header#header
           li.nav-item
             a.nav-link.py-3.px-md-3(href='review.html') Đánh giá
           li.nav-item.display-till-md.log-min
-            a.nav-link.py-3(href='#' data-toggle='modal' data-target='#logreg') Đăng nhập/Đăng ký
+            a.nav-link.py-3.logreg-togglers(href='#' data-toggle='modal' data-target='#logreg') 
+              span Đăng nhập/Đăng ký
 
       .log-cart-search
-        a#logregToggler.hidden-till-md.log-max(href='#' data-toggle='modal' data-target='#logreg') Đăng nhập/Đăng ký
+        .logreg-togglers-wrapper
+          a#logregToggler.hidden-till-md.log-max.logreg-togglers(href='#' data-toggle='modal' data-target='#logreg') 
+            span Đăng nhập/Đăng ký
+          .dropdown-menu
+            a.dropdown-item(href='#') 
+              span.mr-4 
+                i.fas.fa-id-card
+              span Thông tin cá nhân
+            a.dropdown-item.logout(href='#') 
+              span.mr-4  
+                i.fas.fa-sign-out-alt
+              span Đăng xuất  
         a.cart-icon(href="cart.html")
           <i class="fas fa-shopping-cart"></i>
           .cart__badge-wrapper
