--- a/changeable-list/template/index.pug
+++ b/changeable-list/template/index.pug
@@ -20,14 +20,14 @@ body
     
     table.table.table-striped
       thead.thead-dark
-        tr
+        tr.table-head
           th Họ tên
           th Năm sinh
           th Email
           th Số điện thoại
           th  
       tbody
-        tr
+        tr.users
           td Joe Biden
           td 1942
           td johnbiden@gmail.com
@@ -45,7 +45,7 @@ body
                 i.fas.fa-trash-alt
               span.ml-2 Xóa
 
-        tr
+        tr.users
           td Kim Jong-un 
           td 1984
           td kimjongun@gmail.com
@@ -63,7 +63,7 @@ body
                 i.fas.fa-trash-alt
               span.ml-2 Xóa
 
-        tr
+        tr.users
           td Vladimir Putin
           td 1952
           td vladimirputin@gmail.com
@@ -84,8 +84,12 @@ body
 
     script(src='https://kit.fontawesome.com/d8c5e3f38e.js' crossorigin='anonymous')
 
-    script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
 
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js' integrity='sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns' crossorigin='anonymous')
+
+    script(src="script.js")
+
+
 
             
