--- a/halo/template/index.pug
+++ b/halo/template/index.pug
@@ -9,11 +9,14 @@ block title
 block script
   script(src='https://unpkg.com/aos@2.3.1/dist/aos.js')
   script(src='js/aos-init.js')
+  script(src='js/index.js')
 
 block content 
 
+  include parts/updates.pug
+
   include parts/main-carousel.pug
-  
+
   section.intro.intro--camera
     .container-xl.px-sm-5.px-xl-0
       .row
@@ -157,4 +160,5 @@ block content
           img(src="img/img--misc/social-insta.png", alt="halo thế giới máy ảnh")
         a.socials__item.d-block(href="#")
           img.h-100(src="img/img--misc/social-twitter.png", alt="halo thế giới máy ảnh")
+
 
