--- a/halo/template/parts/updates.pug
+++ b/halo/template/parts/updates.pug
@@ -9,7 +9,7 @@
       .modal-body
         ul 
           li - v1.1 (14/03): Tối ưu
-          li - v1.2 (16/03): Thêm tính năng đăng ký/đăng nhập/đăng xuất (sử dụng local storage)
+          li - v1.2 (16/03): Giả lập đăng ký/đăng nhập/đăng xuất cơ bản (sử dụng local storage, chỉ hiển thị được tên người dùng trên thanh nav)
       // Modal footer
       .modal-footer.justify-content-between
         span.updates__hide-warning Sau khi đóng, thông báo này sẽ không hiển thị nữa cho đến khi mở trang chủ trong 1 tab mới 
