--- a/halo/template/parts/footer.pug
+++ b/halo/template/parts/footer.pug
@@ -20,7 +20,7 @@ footer.dark-side#footer
       br
       | Tổng đài tư vấn mua hàng: 099.999.9999
       br 
-      | Email: info@halo.vn
+      | Email: info@halo.vn / ducnt444@gmail.com
       br 
       | ĐKKD số 0123456789 do Sở Kế hoạch và Đầu tư TP. Hà Nội cấp ngày 01/01/2021
 
