--- a/changeable-list/template/details.pug
+++ b/changeable-list/template/details.pug
@@ -17,21 +17,21 @@ body
       .form-group
         label(for="name") Họ tên 
           span *
-        input(type="text") 
+        input#input__name(type="text") 
 
       .form-group 
         label(for="name") Năm sinh 
-        input(type="text") 
+        input#input__dob(type="text") 
 
       .form-group 
         label(for="name") Email 
           span *
-        input(type="text") 
+        input#input__email(type="text") 
 
       .form-group 
         label(for="name") Phone 
           span *
-        input(type="text")
+        input#input__phone(type="text")
 
       .form-group.d-flex.justify-content-center.align-items-center
         a.btn.btn--back(href="index.html").bg-secondary.d-flex.justify-content-center.align-items-center.text-light
@@ -39,15 +39,16 @@ body
             i.fas.fa-angle-left
           span Quay lại 
          
-        button.ml-3.btn.bg-success.text-light 
+        a.ml-3.btn.bg-success.text-light#save(href="index.html")
           span.mr-2
             i.fas.fa-save
           span Lưu
 
     script(src='https://kit.fontawesome.com/d8c5e3f38e.js' crossorigin='anonymous')
 
-    script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
 
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js' integrity='sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns' crossorigin='anonymous')
-
+    
+    script(src="script.js")
             
