--- a/journey-card-game/css/style.css
+++ b/journey-card-game/css/style.css
@@ -1,4 +1,4 @@
-.test-btn1, .test-btn2 {
+.test-btn1, .test-btn2, .test-btn3 {
   position: fixed;
   z-index: 10000;
   width: 100px;
@@ -7,10 +7,15 @@
 
 .test-btn1 {
   top: 50px;
-  right: 200px;
+  right: 350px;
 }
 
 .test-btn2 {
+  top: 50px;
+  right: 200px;
+}
+
+.test-btn3 {
   top: 50px;
   right: 50px;
 }
@@ -151,7 +156,6 @@ body {
   width: 100%;
   height: 100vh;
   position: relative;
-
 }
 
 .modal-bg {
@@ -168,7 +172,6 @@ body {
   background-color: #000;
   position: fixed;
   z-index: 2000;
-  top: 100vh;
   transition: all 1s;
 }
 
