--- a/journey-card-game/template/index.pug
+++ b/journey-card-game/template/index.pug
@@ -1,41 +1,31 @@
-doctype html
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Play Ground
+extends parts/layout.pug
 
-    link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0' crossorigin='anonymous')
-    link(rel="stylesheet", href="css/style.css")
-  body 
-    button.test-btn1 Test #1
-    button.test-btn2 Test #2
-    .screen.d-flex.justify-content-center.align-items-center
-      .modal-bg 
+block title 
+  title Mulligan stage - Journey the card game
 
-      .login-box.box-1
-        h1.login-header.text-center Đăng nhập 
-        h1.register-header.text-center.hidden Đăng ký
+block css
+  link(rel="stylesheet", href="css/title.css")
 
-        form.d-flex.flex-column.align-items-center(action="")
-          input(type="text" placeholder="Username") 
-          button.btn.btn--login(type="button") Xác nhận 
-          button.btn.btn--register.hidden(type="button") Xác nhận 
-        .log-reg-wrapper 
-          p.to-register.text-center Tạo username mới 
-          p.to-login.text-center.hidden Quay về đăng nhập
+block script
 
-      .loading.d-flex.justify-content-center.align-items-end.hidden--fade
-        h1.loading-header.me-3 Loading
-        .loading-icon
-          span.spinner-grow.spinner-grow-sm
-          span.spinner-grow.spinner-grow-sm.mx-2
-          span.spinner-grow.spinner-grow-sm
+block content
 
-    .transition-screen 
+  .screen.d-flex.justify-content-center.align-items-center
+    .login-box.box-1
+      h1.login-header.text-center Đăng nhập 
+      h1.register-header.text-center.hidden Đăng ký
 
+      form.d-flex.flex-column.align-items-center(action="")
+        input(type="text" placeholder="Username") 
+        button.btn.btn--login(type="button") Xác nhận 
+        button.btn.btn--register.hidden(type="button") Xác nhận 
+      .log-reg-wrapper 
+        p.to-register.text-center Tạo username mới 
+        p.to-login.text-center.hidden Quay về đăng nhập
 
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
-    script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js' integrity='sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8' crossorigin='anonymous')  
-    script(src="js/script.js") 
+    .loading.d-flex.justify-content-center.align-items-end.hidden--fade
+      h1.loading-header.me-3 Loading
+      .loading-icon
+        span.spinner-grow.spinner-grow-sm
+        span.spinner-grow.spinner-grow-sm.mx-2
+        span.spinner-grow.spinner-grow-sm
