--- a/journey-card-game/template/parts/layout.pug
+++ b/journey-card-game/template/parts/layout.pug
@@ -13,6 +13,10 @@ html(lang="en")
     block css
 
   body 
+
+    .version-info 
+      p.version EARLY ACCESS v0.1 
+
     .modal-bg
 
     .transition-screen
