--- a/journey-card-game/css/title.css
+++ b/journey-card-game/css/title.css
@@ -1,3 +1,16 @@
 .transition-screen {
   top: 100vh;
 }
+
+.menu-btn-group .btn {
+  width: 200px;
+  margin: 10px 0px;
+}
+
+.screen {
+  background-image: url("../images/bg--title.webp");
+}
+
+.modal-bg {
+  display: block;
+}
