--- a/journey-card-game/template/index.pug
+++ b/journey-card-game/template/index.pug
@@ -4,9 +4,10 @@ block title
   title Journey the card game
 
 block css
-  link(rel="stylesheet", href="css/title.css")
+  link(rel="stylesheet", href="css/index.css")
 
 block script
+  script(src="js/index.js") 
 
 block content
 
@@ -23,9 +24,3 @@ block content
         p.to-register.text-center Create new profile
         p.to-login.text-center.hidden Return to login
 
-    .loading.d-flex.justify-content-center.align-items-end.hidden--fade
-      h1.loading-header.me-3 Loading
-      .loading-icon
-        span.spinner-grow.spinner-grow-sm
-        span.spinner-grow.spinner-grow-sm.mx-2
-        span.spinner-grow.spinner-grow-sm
