--- a/journey-card-game/template/parts/layout.pug
+++ b/journey-card-game/template/parts/layout.pug
@@ -21,6 +21,13 @@ html(lang="en")
 
     .transition-screen
 
+    .loading.d-flex.justify-content-center.align-items-end.hidden--fade
+      h1.loading-header.me-3 Loading
+      .loading-icon
+        span.spinner-grow.spinner-grow-sm
+        span.spinner-grow.spinner-grow-sm.mx-2
+        span.spinner-grow.spinner-grow-sm
+
     button.test-btn1 Test #1
     button.test-btn2 Test #2
     a.test-btn3(href="mulligan.html") Test #3
