--- a/journey-card-game/css/lobby.css
+++ b/journey-card-game/css/lobby.css
@@ -14,6 +14,59 @@
 .screen {
   background-image: url("../images/lobby-bg.jpg");
   background-position: left center;
-  background-size: 110%;
+  background-size: 105%;
   animation: animated-bg 25s linear 0s infinite alternate;
+  padding: 0px 30px;
+  perspective: 1000px;
+}
+
+.logo {
+  position: fixed;
+  top: 50px;
+  left: calc(50% - 400px);
+  width: 800px;
+  opacity: 0.8;
+}
+
+.menu, .news {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 350px;
+  padding: 30px;
+  color: #fff;
+}
+
+.menu {
+  margin-left: 70px;
+  animation: rotateMenu 5s infinite alternate;
+}
+
+.news {
+  margin-right: 70px;
+  animation: rotateNews 5s infinite alternate;
+}
+
+@keyframes rotateMenu {
+  0% {transform: rotateY(30deg);}
+  100% {transform: rotateY(45deg);}
+}
+
+@keyframes rotateNews {
+  0% {transform: rotateY(-30deg);}
+  100% {transform: rotateY(-45deg);}
+}
+
+.user-info {
+  margin-bottom: 40px;
+}
+
+.menu-list li {
+  margin-top: 20px;
+  text-align: center;
+  height: 40px;
+  cursor: pointer;
+}
+
+.menu-list li:hover {
+  background-color: rgb(223, 223, 223);
+  color: black
 }
