--- a/journey-card-game/css/style.css
+++ b/journey-card-game/css/style.css
@@ -115,6 +115,7 @@ img {
 
 dl, ol, ul {
   margin: 0px;
+  padding: 0px;
 }
 
 input::-webkit-outer-spin-button,
@@ -133,6 +134,11 @@ input[type=number] {
 h1 {
   font-size: 36px;
   font-weight: 700;
+}
+
+h2 {
+  font-size: 24px;
+  font-weight: 500;
 }
 
 body {
@@ -171,47 +177,14 @@ body {
 .transition-screen {
   width: 100%;
   height: 100vh;
+  top: 0vh;
   background-color: #000;
   position: fixed;
   z-index: 2000;
+}
+
+.transition {
   transition: all 1s;
-}
-
-.title-box {
-  position: relative;
-  z-index: 1001;
-  background-color: #fff;
-  box-shadow: 0 0 20px #fff;
-  border-radius: 16px;
-  padding: 30px;
-  transition: all 0.5s;
-  min-width: 268px;
-}
-
-.title-box form, .title-box h1 {
-  margin-bottom: 40px;
-} 
-
-.title-box input {
-  margin-bottom: 20px;
-  padding: 5px 15px;
-  border-radius: 8px;
-}
-
-.title-box .btn {
-  border: 1px solid rgb(68, 68, 68);
-  border-radius: 8px;
-  font-size: 16px;
-}
-
-.title-box .btn:hover {
-  background-color: black;
-  color: #fff;
-}
-
-.to-register, .to-login {
-  color: #0d6efd;
-  cursor: pointer;
 }
 
 .show-up {
@@ -232,6 +205,7 @@ body {
   bottom: 70px;
   left: calc(50% - 93px);
   color: #fff;
+  z-index: 3000;
 }
 
 
