--- a/halo/template/parts/updates.pug
+++ b/halo/template/parts/updates.pug
@@ -21,6 +21,17 @@
               li - Mô phỏng đăng ký/đăng nhập/đăng xuất cơ bản (sử dụng local storage, chỉ hiển thị được tên người dùng trên thanh nav)
               li - Mô phỏng loading trang
 
+        .projects.mt-5
+          p.mb-2 Các project khác của 
+            a.text-primary(href="https://github.com/ducnt444/") tôi:  
+
+          ul 
+            li.d-block.mx-auto.mt-1
+              a.text-primary(href="https://journey-card-game.herokuapp.com/") - Journey - the card game: pet project, early access
+
+            li.d-block.mx-auto.mt-1 
+              a.text-primary(href="https://changeable-list.herokuapp.com/") - Changeable list: bài tập quản lý danh sách cơ bản, mô phỏng sử dụng REST API
+
       // Modal footer
       .modal-footer.justify-content-between
         span.updates__hide-warning Sau khi đóng, thông báo này sẽ không hiển thị nữa cho đến khi mở trang chủ trong 1 tab mới 
