--- a/halo/template/parts/updates.pug
+++ b/halo/template/parts/updates.pug
@@ -27,7 +27,7 @@
 
           ul 
             li.d-block.mx-auto.mt-1
-              a.text-primary(href="https://journey-card-game.herokuapp.com/") - Journey - the card game: pet project, early access
+              a.text-primary(href="https://journey-card-game.herokuapp.com/") - Journey - the card game: pet project, alpha test
 
             li.d-block.mx-auto.mt-1 
               a.text-primary(href="https://changeable-list.herokuapp.com/") - Changeable list: bài tập quản lý danh sách cơ bản, mô phỏng sử dụng REST API
