--- a/halo/css/review.css
+++ b/halo/css/review.css
@@ -8,7 +8,7 @@ section {
 }
 
 .review__main-banner {
-  background-image: url(/halo/img/img--review/review-banner-2.png);
+  background-image: url(/halo/img/img--review/review-banner-2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
