--- a/halo/template/index.pug
+++ b/halo/template/index.pug
@@ -123,7 +123,7 @@ block content
       h1 HALO review
 
       a.review-item.d-flex(href="review-details.html" data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000")
-        img.review-item__img(src="img/img--misc/review-img-v2.png", alt="Top DSLR đáng mua năm 2021")
+        img.review-item__img(src="img/img--misc/review-img-v22.jpg", alt="Top DSLR đáng mua năm 2021")
 
         .review-item__content.d-flex.flex-column.justify-content-between
           .review-header.d-flex.flex-wrap.align-items-start.align-content-start
@@ -135,7 +135,7 @@ block content
           p.review-preview Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.
       
       a.review-item.d-flex(href="review-details.html" data-aos="fade-left" data-aos-offset="50" data-aos-easing="ease-in-sine" data-aos-duration="1000")
-        img.review-item__img(src="img/img--misc/review-img-v2.png", alt="Top DSLR đáng mua năm 2021")
+        img.review-item__img(src="img/img--misc/review-img-v22.jpg", alt="Top DSLR đáng mua năm 2021")
         
         .review-item__content.d-flex.flex-column.justify-content-between
           .review-header.d-flex.flex-wrap.align-items-start.align-content-start
