--- a/halo/template/parts/updates.pug
+++ b/halo/template/parts/updates.pug
@@ -21,17 +21,23 @@
               li - Mô phỏng đăng ký/đăng nhập/đăng xuất cơ bản (sử dụng local storage, chỉ hiển thị được tên người dùng trên thanh nav)
               li - Mô phỏng loading trang
 
+          li.mb-3
+            h2.font-weight-bold.text-left v1.3: 
+            ul 
+              li - Tối ưu kich thước một số tài nguyên (R.I.P "space-background-4K-Ultra-HD-Pro-Max.png")
+
         .projects.mt-5
-          p.mb-2 Các project khác của 
-            a.text-primary(href="https://github.com/ducnt444/") tôi:  
+          p.mb-2 Các project khác của tôi:  
 
           ul 
             li.d-block.mx-auto.mt-1
-              a.text-primary(href="https://journey-card-game.herokuapp.com/") - Journey - the card game: pet project, alpha test
+              a.text-primary(href="https://ducnt444.github.io/planetary/") - PLANETARY: demo space travel (mobile), sử dụng Vue.JS
 
             li.d-block.mx-auto.mt-1 
-              a.text-primary(href="https://changeable-list.herokuapp.com/") - Changeable list: bài tập quản lý danh sách cơ bản, mô phỏng sử dụng REST API
+              a.text-primary(href="https://changeable-list.herokuapp.com/") - Changeable list: demo sử dụng Jquery, DOM manipulation, REST API cơ bản
+
+          p.mt-3.mb-2.text-center.font-italic ducnt444@gmail.com @ 2021
 
       // Modal footer
       .modal-footer.justify-content-between
-        span.updates__hide-warning Sau khi đóng, thông báo này sẽ không hiển thị nữa cho đến khi mở trang chủ trong 1 tab mới 
+        span.updates__hide-warning Sau khi đóng, thông báo này sẽ không hiển thị nữa cho đến khi mở lại trang web trong 1 tab mới 
