--- a/halo/template/parts/updates.pug
+++ b/halo/template/parts/updates.pug
@@ -31,10 +31,13 @@
 
           ul 
             li.d-block.mx-auto.mt-1
-              a.text-primary(href="https://ducnt444.github.io/planetary/") - PLANETARY: demo space travel (mobile), sử dụng Vue.JS
+              a.text-primary(href="https://ducnt444.github.io/planetary/" target="_blank") - PLANETARY: demo web về du lịch vũ trụ, sử dụng Vue.JS
 
             li.d-block.mx-auto.mt-1 
-              a.text-primary(href="https://changeable-list.herokuapp.com/") - Changeable list: demo sử dụng Jquery, DOM manipulation, REST API cơ bản
+              a.text-primary(href="https://changeable-list.herokuapp.com/" target="_blank") - Changeable list: demo sử dụng Jquery, DOM manipulation, REST API cơ bản
+
+            li.d-block.mx-auto.mt-1 
+              a.text-primary(href="https://ducnt444.github.io/react-task-manager/" target="_blank") - Task manager: demo sử dụng React
 
           p.mt-3.mb-2.text-center.font-italic ducnt444@gmail.com @ 2021
 
